2002-10-01  Duncan Mak  <duncan@ximian.com>

	* mono/os/Makefile.am: Add gc_wrapper.h.

	* runtime/Makefile.am: Fix the path for monoresgen.exe.

2002-09-27  Dick Porter  <dick@ximian.com>

	* configure.in: Check for semaphore.h.  Patch for BSD from
	jmmv@hispabsd.org (Julio Merino).

2002-09-20  Duncan Mak  <duncan@ximian.com>

	* data/config.in: Added reference to libxslt.

2002-09-20  Mark Crichton  <crichton@gimp.org>

	* configure.in: added NEED_LINK_UNLINK to make io-layer more portable.
	Linux has a "virtual fs" for UNIX sockets, Solaris and BSD don't.
	For systems that do not have such a virtual FS, define
	NEED_LINK_UNLINK.

	* acconfig.h: added NEED_LINK_UNLINK
	
Wed Sep 4 18:09:58 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: add some needed defines to fix support of
	threads in the GC.

2002-09-19  Mark Crichton  <crichton@gimp.org>

	* configure.in: Added checks for Solaris to use X/Open functionality.
	Really needed for the io-layer code.

2002-09-15  Andrew Birkett  <andy@nobugs.org>

	* man/mcs.1: --probe is now --expect-error.

2002-09-09  Dick Porter  <dick@ximian.com>

	* acconfig.h: 
	* configure.in: Simplify thread checks, by using canned rules for
	particular systems (based on the sleepycat db configure.in).
	Tested on linux/x86, freebsd and w32.  Solaris also added, but I
	don't have a solaris machine to try it on.

2002-09-04  Juli Mallett  <jmallett@FreeBSD.org>

	* configure.in: Include <sys/types.h> when checking <sys/un.h> stuff.

2002-09-02  Diego Sevilla Ruiz  <dsevilla@um.es>

	* doc/ccvs: Added how to convert SSH keys (from SSH Communications
	Security) to the OpenSSH keys required by mono CVS
	access.

2002-09-01  Juli Mallett  <jmallett@FreeBSD.org>

	* configure.in, mono/interpreter/interp.c,
	mono/io-layer/handles.c, mono/io-layer/processes.c,
	mono/io-layer/threads.c, mono/io-layer/timed-thread.c,
	mono/io-layer/wait.c, mono/jit/helpers.c, mono/jit/jit.c,
	mono/metadata/appdomain.c, mono/metadata/class.c,