@@ -18,3 +18,4 @@
 #undef HAVE_TM_GMTOFF
 #undef MONO_SIZEOF_SUNPATH
 #undef NEED_LINK_UNLINK
+#undef PTHREAD_POINTER_ID
